JD-CR-65 Document Pluggable Component Factories #266 fixed issues after review